image path test

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="industry_card_wrap">
                 <!-- industry card -->
                 <div class="industry_card" data-aos="zoom-in">
-                    <img src="/assets/landscape_v1.jpeg" class="industry_image" alt="">
+                    <img src="assets/landscape_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">landscape</p>
                 </div>
