image path fix final

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                 </div>
                 <!-- industry card -->
                 <div class="industry_card" data-aos="zoom-in">
-                    <img src="/assets/architecture_v1.jpeg" class="industry_image" alt="">
+                    <img src="assets/architecture_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">architecture</p>
                 </div>
                 <!-- industry card -->
                 <div class="industry_card" data-aos="zoom-in">
-                    <img src="/assets/interiors_v1.jpeg" class="industry_image" alt="">
+                    <img src="assets/interiors_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">interiors</p>
                 </div>
                 <!-- industry card -->
                 <div class="industry_card" data-aos="zoom-in">
-                    <img src="/assets/residential_v1.jpeg" class="industry_image" alt="">
+                    <img src="assets/residential_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">residential</p>
                 </div>
