--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             </div>
         </div>
     </section>
+    <!-- call cta popup -->
+    <div class="call_cta_popup">
+        <div class="call_cta_container">
+            <p class="call_cta_text">Ruko zara, website toh banne do.</p>
+        </div>
+    </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="main.js"></script>
 </body>
