hero cta change

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="hero_head" data-aos="fade-up">
                 We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
             </p>
-            <a class="hero_cta" data-aos="fade-left">industries we serve</a>
+            <a class="hero_cta">Industries we serve</a>
         </div>
     </section>
     <!-- industries -->
