--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav_links">About</a>
             </div>
             <div class="call_cta_wrap">
-                <a class="nav_links call_cta">Call</a>
+                <a class="nav_links call_cta">Get a quote</a>
             </div>
         </div>
     </header>
@@ -72,6 +72,37 @@
             </div>
         </div>
     </section>
+    <!-- statistics -->
+    <section class="stats">
+        <div class="container">
+            <div class="stats_cards">
+                <!-- stat card -->
+                <div class="stat_card">
+                    <p class="stat_number">91%</p>
+                    <p class="stat_desc">client retention</p>
+                </div>
+                <!-- stat card -->
+                <div class="stat_card">
+                    <p class="stat_number">91%</p>
+                    <p class="stat_desc">client retention</p>
+                </div>
+                <!-- stat card -->
+                <div class="stat_card">
+                    <p class="stat_number">91%</p>
+                    <p class="stat_desc">client retention</p>
+                </div>
+                <!-- stat card -->
+                <div class="stat_card">
+                    <p class="stat_number">91%</p>
+                    <p class="stat_desc">client retention</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer>
+        
+    </footer>
     <!-- call cta popup -->
     <div class="call_cta_popup">
         <div class="call_cta_container">
