statistics section changes

--- a/index.html
+++ b/index.html
@@ -75,25 +75,26 @@
     <!-- statistics -->
     <section class="stats">
         <div class="container">
+            <p class="statistics_head">Today, we are at...</p>
             <div class="stats_cards">
                 <!-- stat card -->
                 <div class="stat_card">
-                    <p class="stat_number">91%</p>
-                    <p class="stat_desc">client retention</p>
+                    <p class="stat_number">30</p>
+                    <p class="stat_desc">clients</p>
                 </div>
                 <!-- stat card -->
                 <div class="stat_card">
-                    <p class="stat_number">91%</p>
-                    <p class="stat_desc">client retention</p>
+                    <p class="stat_number">26</p>
+                    <p class="stat_desc">projects delivered</p>
                 </div>
                 <!-- stat card -->
                 <div class="stat_card">
-                    <p class="stat_number">91%</p>
-                    <p class="stat_desc">client retention</p>
+                    <p class="stat_number">5</p>
+                    <p class="stat_desc">years of experience</p>
                 </div>
                 <!-- stat card -->
                 <div class="stat_card">
-                    <p class="stat_number">91%</p>
+                    <p class="stat_number">94%</p>
                     <p class="stat_desc">client retention</p>
                 </div>
             </div>
