--- a/index.html
+++ b/index.html
@@ -32,40 +32,85 @@
         </div>
     </header>
     <!-- hero section -->
-    <section class="hero">
-        <div class="container">
-            <p class="pre_head" data-aos="fade-down">services</p>
-            <p class="hero_head" data-aos="fade-up">
-                We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
-            </p>
-            <a class="hero_cta">Industries we serve</a>
+    <!-- <section class="hero_wrap">
+        <div class="hero">
+            <div class="container hero_container">
+                <p class="pre_head" data-aos="fade-down">services</p>
+                <p class="hero_head" data-aos="fade-up">
+                    We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
+                </p>
+                <a class="hero_cta">Industries we serve</a>
+            </div>
+        </div>
+    </section> -->
+    <!-- hero section test -->
+    <section class="hero_wrap">
+        <div class="hero">
+            <div class="container hero_container">
+                <p class="pre_head">services</p>
+                <p class="hero_head">
+                    We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
+                </p>
+                <a class="hero_cta">Industries we serve</a>
+            </div>
         </div>
     </section>
     <!-- industries -->
+    <!-- <section class="industries">
+        <div class="container">
+            <div class="industry_card_wrap">
+                <!-- industry card
+                <div class="industry_card" data-aos="zoom-in">
+                    <img src="assets/home_categories/landscape_v1.jpeg" class="industry_image" alt="">
+                    <div class="industry_overlay"></div>
+                    <p class="industry_name">landscape</p>
+                </div>
+                <!-- industry card
+                <div class="industry_card" data-aos="zoom-in" data-aos-delay="500">
+                    <img src="assets/home_categories/architecture_v1.jpeg" class="industry_image" alt="">
+                    <div class="industry_overlay"></div>
+                    <p class="industry_name">architecture</p>
+                </div>
+                <!-- industry card
+                <div class="industry_card" data-aos="zoom-in"data-aos-delay="1000">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="industry_image" alt="">
+                    <div class="industry_overlay"></div>
+                    <p class="industry_name">interiors</p>
+                </div>
+                <!-- industry card
+                <div class="industry_card" data-aos="zoom-in" data-aos-delay="1500">
+                    <img src="assets/home_categories/residential_v1.jpeg" class="industry_image" alt="">
+                    <div class="industry_overlay"></div>
+                    <p class="industry_name">residential</p>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <!-- industries test -->
     <section class="industries">
         <div class="container">
             <div class="industry_card_wrap">
                 <!-- industry card -->
-                <div class="industry_card" data-aos="zoom-in">
-                    <img src="assets/landscape_v1.jpeg" class="industry_image" alt="">
+                <div class="industry_card">
+                    <img src="assets/home_categories/landscape_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">landscape</p>
                 </div>
                 <!-- industry card -->
-                <div class="industry_card" data-aos="zoom-in">
-                    <img src="assets/architecture_v1.jpeg" class="industry_image" alt="">
+                <div class="industry_card">
+                    <img src="assets/home_categories/architecture_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">architecture</p>
                 </div>
                 <!-- industry card -->
-                <div class="industry_card" data-aos="zoom-in">
-                    <img src="assets/interiors_v1.jpeg" class="industry_image" alt="">
+                <div class="industry_card">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">interiors</p>
                 </div>
                 <!-- industry card -->
-                <div class="industry_card" data-aos="zoom-in">
-                    <img src="assets/residential_v1.jpeg" class="industry_image" alt="">
+                <div class="industry_card">
+                    <img src="assets/home_categories/residential_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">residential</p>
                 </div>
@@ -102,7 +147,8 @@
     </section>
     <!-- footer -->
     <footer>
-        
+        <p class="company_details">EN Architecture & Designs &copy;</p>
+        <p class="company_details">Borivali East, Mumbai</p>
     </footer>
     <!-- call cta popup -->
     <div class="call_cta_popup">
