--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <p class="logo_full">Environment, Architecture & Designs</p>
             </div>
             <div class="navigation">
-                <a class="nav_links">Home</a>
-                <a class="nav_links">Portfolio</a>
+                <a href="index.html" class="nav_links">Home</a>
+                <a href="portfolio.html" class="nav_links">Portfolio</a>
                 <a class="nav_links">About</a>
             </div>
             <div class="call_cta_wrap">
