--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,24 +96,44 @@
                     <img src="assets/home_categories/landscape_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">landscape</p>
+                    <a class="industry_cta">
+                        <span class="material-symbols-outlined industry_cta_arrow">
+                            arrow_forward
+                        </span>
+                    </a>
                 </div>
                 <!-- industry card -->
                 <div class="industry_card">
                     <img src="assets/home_categories/architecture_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">architecture</p>
+                    <a class="industry_cta">
+                        <span class="material-symbols-outlined industry_cta_arrow">
+                            arrow_forward
+                        </span>
+                    </a>
                 </div>
                 <!-- industry card -->
                 <div class="industry_card">
                     <img src="assets/home_categories/interiors_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">interiors</p>
+                    <a class="industry_cta">
+                        <span class="material-symbols-outlined industry_cta_arrow">
+                            arrow_forward
+                        </span>
+                    </a>
                 </div>
                 <!-- industry card -->
                 <div class="industry_card">
                     <img src="assets/home_categories/residential_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">residential</p>
+                    <a class="industry_cta">
+                        <span class="material-symbols-outlined industry_cta_arrow">
+                            arrow_forward
+                        </span>
+                    </a>
                 </div>
             </div>
         </div>
