--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
     <!-- header -->
     <header>
         <div class="container header_container">
+            <!-- logo -->
             <div class="logo_wrap">
                 <p class="logo">EN+AD</p>
                 <p class="logo_full">Environment, Architecture & Designs</p>
             </div>
+            <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
-                <a href="portfolio.html" class="nav_links">Portfolio</a>
-                <a class="nav_links">About</a>
+                <a href="portfolio.html" class="nav_links">Key Projects</a>
+                <a class="nav_links nav_industries">Industries</a>
+                <a href="about.html" class="nav_links">About</a>
             </div>
+            <!-- header cta -->
             <div class="call_cta_wrap">
                 <a class="nav_links call_cta">Get a quote</a>
             </div>
@@ -52,7 +56,7 @@
                 <p class="hero_head">
                     We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
                 </p>
-                <a class="hero_cta">Industries we serve</a>
+                <a class="hero_cta">Highlights</a>
             </div>
         </div>
     </section>
@@ -88,7 +92,7 @@
         </div>
     </section> -->
     <!-- industries test -->
-    <section class="industries">
+    <section class="industries" id="industries">
         <div class="container">
             <div class="industry_card_wrap">
                 <!-- industry card -->
@@ -96,7 +100,7 @@
                     <img src="assets/home_categories/landscape_v1.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">landscape</p>
-                    <a class="industry_cta">
+                    <a href="landscape.html" class="industry_cta">
                         <span class="material-symbols-outlined industry_cta_arrow">
                             arrow_forward
                         </span>
