--- a/portfolio.html
+++ b/portfolio.html
@@ -14,19 +14,23 @@
         <title>EN+AD</title>
     </head>
 <body>
-    <section class="page_wrap">
+    <section class="portfolio_page_wrap">
         <!-- header -->
         <header>
             <div class="container header_container">
+                <!-- logo -->
                 <div class="logo_wrap">
                     <p class="logo">EN+AD</p>
                     <p class="logo_full">Environment, Architecture & Designs</p>
                 </div>
+                <!-- main navigation -->
                 <div class="navigation">
                     <a href="index.html" class="nav_links">Home</a>
-                    <a href="portfolio.html" class="nav_links">Portfolio</a>
-                    <a class="nav_links">About</a>
+                    <a href="portfolio.html" class="nav_links">Key Projects</a>
+                    <a href="index.html#industries" class="nav_links nav_industries">Industries</a>
+                    <a href="about.html" class="nav_links">About</a>
                 </div>
+                <!-- header cta -->
                 <div class="call_cta_wrap">
                     <a class="nav_links call_cta">Get a quote</a>
                 </div>
@@ -37,25 +41,25 @@
             <div class="container portfolio_industries_container">
                 <!-- portfolio industry card -->
                 <div class="portfolio_industry_card portf_landscape_card">
-                    <img src="assets/home_categories/architecture_v1.jpeg" class="portfolio_industry_image" alt="">
+                    <!-- <img src="assets/home_categories/landscape_v1.jpeg" class="portfolio_industry_image" alt=""> -->
                     <div class="portfolio_industry_overlay"></div>
                     <p class="portfolio_industry_name"></p>
                 </div>
                 <!-- portfolio industry card -->
                 <div class="portfolio_industry_card portf_architecture_card">
-                    <img src="assets/home_categories/architecture_v1.jpeg" class="portfolio_industry_image" alt="">
+                    <!-- <img src="assets/home_categories/architecture_v1.jpeg" class="portfolio_industry_image" alt=""> -->
                     <div class="portfolio_industry_overlay"></div>
                     <p class="portfolio_industry_name"></p>
                 </div>
                 <!-- portfolio industry card -->
                 <div class="portfolio_industry_card portf_interior_card">
-                    <img src="assets/home_categories/architecture_v1.jpeg" class="portfolio_industry_image" alt="">
+                    <!-- <img src="assets/home_categories/architecture_v1.jpeg" class="portfolio_industry_image" alt=""> -->
                     <div class="portfolio_industry_overlay"></div>
                     <p class="portfolio_industry_name"></p>
                 </div>
                 <!-- portfolio industry card -->
                 <div class="portfolio_industry_card portf_residential_card">
-                    <img src="assets/home_categories/architecture_v1.jpeg" class="portfolio_industry_image" alt="">
+                    <!-- <img src="assets/home_categories/residential_v1.jpeg" class="portfolio_industry_image" alt=""> -->
                     <div class="portfolio_industry_overlay"></div>
                     <p class="portfolio_industry_name"></p>
                 </div>
