landscape scroll fix

--- a/landscape.html
+++ b/landscape.html
@@ -16,7 +16,7 @@
     </head>
 <body class="category_page">
     <!-- header -->
-    <header>
+    <header class="category_head">
         <div class="container header_container">
             <!-- logo -->
             <div class="logo_wrap">
@@ -42,150 +42,148 @@
     <div class="project_head_wrap">
         <p class="project_head category_project_head">Projects</p>
     </div>
-    <div class="container">
-        <div class="project_cards_wrap">
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+    <div class="container project_cards_wrap">
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
-            <!-- project card -->
-            <div class="project_card">
-                <div class="project_card_inside">
-                    <div class="project_card_front">
-                        <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
-                    </div>
-                    <div class="project_card_back">
-                        <p class="project_name">Project Name</p>
-                        <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
-                    </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/home_categories/interiors_v1.jpeg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Project Name</p>
+                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus, officia explicabo aliquam laborum accusantium.</p>
                 </div>
             </div>
         </div>
