projects cards changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p class="hero_head">
                     We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
                 </p>
-                <a class="hero_cta">Highlights</a>
+                <a href="portfolio.html" class="hero_cta">Highlights</a>
             </div>
         </div>
     </section>
