--- a/portfolio.html
+++ b/portfolio.html
@@ -71,5 +71,6 @@
             <p class="company_details">Borivali East, Mumbai</p>
         </footer>
     </section>
+    <script src="portfolio.js"></script>
 </body>
 </html>
