--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
-                <a href="portfolio.html" class="nav_links">Key Projects</a>
+                <!-- <a href="portfolio.html" class="nav_links">Key Projects</a> -->
                 <a class="nav_links nav_industries">Industries</a>
                 <a href="about.html" class="nav_links">About</a>
             </div>
@@ -56,7 +56,7 @@
                 <p class="hero_head">
                     We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
                 </p>
-                <a href="portfolio.html" class="hero_cta">Highlights</a>
+                <a class="hero_cta">key projects</a>
             </div>
         </div>
     </section>
@@ -97,18 +97,7 @@
             <div class="industry_card_wrap">
                 <!-- industry card -->
                 <div class="industry_card">
-                    <img src="assets/home_categories/landscape_v1.jpeg" class="industry_image" alt="">
-                    <div class="industry_overlay"></div>
-                    <p class="industry_name">landscape</p>
-                    <a href="landscape.html" class="industry_cta">
-                        <span class="material-symbols-outlined industry_cta_arrow">
-                            arrow_forward
-                        </span>
-                    </a>
-                </div>
-                <!-- industry card -->
-                <div class="industry_card">
-                    <img src="assets/home_categories/architecture_v1.jpeg" class="industry_image" alt="">
+                    <img src="assets/home_categories/architecture_v4.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">architecture</p>
                     <a class="industry_cta">
@@ -119,7 +108,18 @@
                 </div>
                 <!-- industry card -->
                 <div class="industry_card">
-                    <img src="assets/home_categories/interiors_v1.jpeg" class="industry_image" alt="">
+                    <img src="assets/home_categories/landscape_v2.jpeg" class="industry_image" alt="">
+                    <div class="industry_overlay"></div>
+                    <p class="industry_name">landscape</p>
+                    <a href="landscape.html" class="industry_cta">
+                        <span class="material-symbols-outlined industry_cta_arrow">
+                            arrow_forward
+                        </span>
+                    </a>
+                </div>
+                <!-- industry card -->
+                <div class="industry_card">
+                    <img src="assets/home_categories/interiors_v2.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
                     <p class="industry_name">interiors</p>
                     <a class="industry_cta">
@@ -130,9 +130,9 @@
                 </div>
                 <!-- industry card -->
                 <div class="industry_card">
-                    <img src="assets/home_categories/residential_v1.jpeg" class="industry_image" alt="">
+                    <img src="assets/home_categories/residential_v4.jpeg" class="industry_image" alt="">
                     <div class="industry_overlay"></div>
-                    <p class="industry_name">residential</p>
+                    <p class="industry_name">hospitality/healthcare planning</p>
                     <a class="industry_cta">
                         <span class="material-symbols-outlined industry_cta_arrow">
                             arrow_forward
